[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exrecon"
version = "1.0.0"
description = "Advanced OSINT & reconnaissance framework for professional security assessments"
readme = "README.md"
authors = [{ name = "Ali Ihtsham", email = "exreconnaissance@gmail.com" }]
license = { text = "Commercial - All Rights Reserved" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: Other/Proprietary License",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "colorama>=0.4.4",
    "python-nmap>=0.7.1",
    "socksipy-chain>=1.0.0",      # for Tor/proxychains routing
    "tqdm>=4.62.0",
    "beautifulsoup4>=4.9.3",
    "lxml>=4.6.3",
]

[project.optional-dependencies]
dev = ["pytest>=6.0", "black>=21.0", "isort>=5.9", "ruff>=0.0.260"]

[project.urls]
"Homepage" = "https://github.com/ExRecon/Exrecon-Python-V1"
"Bug Reports" = "https://github.com/ExRecon/Exrecon-Python-V1/issues"
"Documentation" = "https://github.com/ExRecon/Exrecon-Python-V1#readme"

# CLI entry point – creates `exrecon` command in PATH
[project.scripts]
exrecon = "exrecon.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["exrecon*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "C90", "I"]
ignore = ["E501"]  # line too long handled by black
